--- a/Workshop/android/app/src/main/AndroidManifest.xml
+++ b/Workshop/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.workshop">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
       android:name=".MainApplication"
@@ -22,6 +24,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4120634441242748~5460048346"/>
     </application>
 
 </manifest>
