--- a/Workshop/package.json
+++ b/Workshop/package.json
@@ -25,14 +25,21 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-ad-manager": "^1.2.2",
+    "react-native-admob-native-ads": "^0.3.9",
+    "react-native-background-actions": "^2.5.2",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-redux": "^7.2.2",
+    "realm": "^10.1.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rut.js": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
